--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,12 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ''
+                abiFilters "arm64-v8a" , "armeabi-v7a"
             }
+        }
+
+        packagingOptions {
+            exclude 'lib/**/libOpenCL.so'
         }
     }
 
