--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -36,6 +36,18 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log)
 
+### OpenCL settings ###
+#reference http://mushuichuan.com/2017/06/11/cmake/
+#http://www.voidcn.com/article/p-chmxbyff-boa.html
+
+include_directories(${CMAKE_SOURCE_DIR}/)
+
+add_library(opencl SHARED IMPORTED )
+
+set_target_properties(opencl
+        PROPERTIES IMPORTED_LOCATION
+        ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libOpenCL.so)
+
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
@@ -45,4 +57,5 @@ target_link_libraries( # Specifies the target library.
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib})
+        ${log-lib}
+        opencl)
